--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="failure">Failure</string>
     <string name="cancel">Cancel</string>
     <string name="forgot_pin">Forgot PIN?</string>
+    <string name="forgot_pin_title">Forgot PIN</string>
     <string name="change_login_pin">Change Login PIN</string>
     <string name="enter_name">Enter Name</string>
     <string name="enter_otp">Enter OTP</string>
