--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="change_one_info">Nothing to save! You have not yet edited.</string>
     <string name="no_internet">No Internet Connection</string>
     <string name="you_have_select_from_date_to_date">You should select From Date or To Date</string>
-    <string name="please_wait">Please wait…</string>
+    <string name="please_wait">Please wait..</string>
     <string name="no_internet_details">You are not connected to internet, make sure Wi-Fi/Data is on, Airplane mode is off and try again.</string>
     <string name="retry">Retry</string>
     <string name="init">INIT</string>
