--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,6 +166,8 @@
     <string name="save_your_lpk">Save your LPK</string>
     <string name="lets_do">Let\'s Do</string>
     <string name="history">History</string>
+    <string name="in_deposit">in Deposit</string>
+    <string name="in_wallet">in Wallet</string>
 
 
     <!--Loan Plans-->
