--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,8 @@
     <string name="interest_day">Interest/Day:</string>
     <string name="rate">Rate</string>
     <string name="loan_applied_successfully">Loan Applied successfully.</string>
+    <string name="empty_transactional_history_message">You haven\'t yet made any transaction through L-Pesa wallet.</string>
+    <string name="empty_withdrawal_history_message">You haven\'t yet withdrawn an amount from your wallet. Make sure that you have the balance in your wallet to withdraw.</string>
     <string name="empty_loan_history_message">You haven\'t applied for any loans yet from L-pesa. Start your journey to financial freedom with the first loan from L-pesa.</string>
     <string name="empty_transfer_history_message">You haven\'t yet invested tokens in LPK Savings. Start your journey to financial freedom and earn weekly interests by investing.</string>
     <string name="empty_investment_message">You haven\'t yet invested. Start your journey to financial freedom and earn weekly interests by investing.</string>
