--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources >
     <string name="app_name">L-Pesa</string>
     <string name="starter_loan">$ Starter Loan</string>
     <string name="sign_in">Sign In</string>
