--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="required_phone_email">Please enter a valid phone number.</string>
     <string name="required_gender">Please select your gender.</string>
     <string name="required_phone">Please enter valid phone number.</string>
+    <string name="required_sim">No SIM card is detected!</string>
     <string name="required_password">Please enter the password.</string>
     <string name="required_pin_code">Please enter a new 6-digit transactional PIN.</string>
     <string name="required_confirm_pin_code">Please re-type your 6-digit PIN.</string>
