--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -278,6 +278,7 @@
     <string name="wallet_address_link">http://www.myetherwallet.com/</string>
     <string name="enter_token">Enter Token</string>
     <string name="minimum_withdrawal_amount">Minimum withdrawal amount is </string>
+    <string name="maximum_withdrawal_amount">Maximum withdrawal amount is </string>
     <string name="update_erc_address">Update your ERC-20 address on L-Pesa to withdraw LPK into your account.</string>
 
 
