--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -437,6 +437,12 @@
     <string name="product_name">Product Name</string>
     <string name="choose_option">Choose Option</string>
     <string name="calculate_your_loan">Calculate Your Loan</string>
+    <string name="one_usd_equal">1 USD =</string>
+    <string name="loan_amount_calculator">Loan Amount</string>
+    <string name="total_payback_calculator">Total Payback</string>
+    <string name="first_weekly_subscription">First Weekly Subscription</string>
+    <string name="mid_weekly_subscription">Mid Weekly Subscription</string>
+    <string name="last_weekly_subscription">Last Weekly Subscription</string>
 
 
 </resources>
