--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -447,6 +447,7 @@
     <string name="select_loan_type">Select Loan Type</string>
     <string name="interest_rate_calculator">Daily Interest Rate</string>
     <string name="loan_period">Loan Period</string>
+    <string name="required_credit_score_calculator">Required Credit Score</string>
 
 
 </resources>
