--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -444,7 +444,7 @@
     <string name="first_weekly_subscription">First Weekly Subscription</string>
     <string name="mid_weekly_subscription">Mid Weekly Subscription</string>
     <string name="last_weekly_subscription">Last Weekly Subscription</string>
-    <string name="select_loan_type">Select Loan Type</string>
+    <string name="select_loan_type">Please select loan type.</string>
     <string name="interest_rate_calculator">Daily Interest Rate</string>
     <string name="loan_period">Loan Period</string>
     <string name="required_credit_score_calculator">Required Credit Score</string>
