--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="enter_email_or_mobile">Enter mobile number to reset PIN via your registered mobile number.</string>
 
     <!--Caution Message-->
+    <string name="loading">Loading</string>
     <string name="required_title">Please select the title.</string>
     <string name="required_name">Please enter your name.</string>
     <string name="required_name_f">Please enter your first name.</string>
@@ -91,6 +92,7 @@
     <string name="required_id_type">Please select the type of ID.</string>
     <string name="required_otp">Please enter the OTP.</string>
     <string name="otp_not_match">You entered an incorrect OTP.</string>
+    <string name="select_your_country">Select your country</string>
     <string name="search_country">Search country</string>
     <string name="required_cancellation_reason">Write a reason for the cancellation.</string>
 
