--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,6 +265,7 @@
 
     <!--Edit Personal Information-->
     <string name="title">Title</string>
+    <string name="full_name">Full Name</string>
     <string name="first_name">First Name*</string>
     <string name="middle_name">Middle Name</string>
     <string name="last_name">Last Name*</string>
