--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="pin_change_success">Login PIN has been changed.</string>
     <string name="change_one_info">Nothing to save! You have not yet edited.</string>
     <string name="no_internet">You are not connected to the internet!</string>
+    <string name="image_not_found">Image file not found</string>
     <string name="you_have_select_from_date_to_date">Select at least one date to filter.</string>
     <string name="please_wait">Please wait...</string>
     <string name="no_internet_details">You are not connected to internet, make sure Wi-Fi/Data is on, Airplane mode is off and try again.</string>
