--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="upload_id_picture">Choose your ID type, enter your ID number &amp; upload a photocopy of the ID </string>
     <string name="continue_to_register">Continue to Register</string>
     <string name="refer_to_otp">You should receive an email with Verification Code. Please enter the Verification Code to verify.</string>
-    <string name="email_verification">Enter your mobile number, email address and submit. You will receive Verification Code in your email. Confirm the email address belongs to you by entering the Verification Code in the next step.</string>
+    <string name="email_verification">Enter your mobile number, email address &amp; Continue. You will receive Verification Code in your email. Confirm the email address belongs to you by entering the Verification Code in the next step.</string>
 
     <!--Password section-->
     <string name="current_password">Current Password</string>
