--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="required_confirm_pin">Please re-type your new PIN.</string>
     <string name="confirm_pin_not_match">The new and re-typed PIN does not match.</string>
     <string name="old_new_password_different">Old and new PIN should be different.</string>
+    <string name="six_digit_new_pin_required">6 digit new PIN required.</string>
     <string name="required_email">Please enter a valid email address.</string>
     <string name="poor_internet">Poor internet connection!</string>
     <string name="something_went_wrong">Something went wrong, please try after sometime!</string>
