--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -466,6 +466,7 @@
     <string name="product_name">Product Name</string>
     <string name="choose_option">Choose Option</string>
     <string name="calculate_your_loan">Loan Calculator</string>
+    <string name="loan_calculate">Calculate Loan</string>
     <string name="one_usd_equal">1 USD =</string>
     <string name="loan_amount_calculator">Loan Amount</string>
     <string name="credit_score_calculator">Credit Score</string>
